Details
-
Type:
Bug
-
Status: Resolved
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: Impala 2.7.0
-
Fix Version/s: Impala 2.9.0
-
Component/s: Backend
-
Labels:None
Description
The last active time in impala-server.cc#L1806 is in milliseconds, but the TimestampValue c'tor expects seconds.
VLOG_QUERY << "Expiring query due to client inactivity: " << expiration_event->second << ", last activity was at: " << TimestampValue(query_state->last_active()).DebugString(); const string& err_msg = Substitute( "Query $0 expired due to client inactivity (timeout is $1)", PrintId(expiration_event->second), PrettyPrinter::Print(timeout_s * 1000000000L, TUnit::TIME_NS));